<resources>
    <string name="app_name">bioplasticbad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="gmail">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="finish">Finish</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="extra_dark">Extra Dark</string>
    <string name="necessarymarker">NecessaryMarker</string>
    <string name="birthday">Birthday</string>
    <string name="other">Other</string>
    <string name="account_setup">Account Setup</string>
    <string name="basic_information">Basic Information</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="preferences">Preferences</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_information">Contact Information</string>
    <string name="recycled_before">- Has recycled before</string>
    <string name="app_before">- Has used the app</string>
    <string name="hasn_t_used_the_app">- Hasn\'t used the app</string>
    <string name="advanced">Advanced</string>
    <string name="intermediate">Intermediate</string>
    <string name="begginner">Beginner</string>
    <string name="hasn_t_recycled_before">- Hasn\'t recycled before</string>
    <string name="item_name">item name</string>
    <string name="journal_entry">journal entry</string>
    <string name="edit_journal">edit journal</string>
    <string name="turn_compost_count_title">turn compost count title</string>
    <string name="add_new_composted_item">add new composted item</string>
    <string name="update_day_count">update day count</string>
    <string name="name">name</string>
    <string name="pronouns">(pronouns)</string>
    <string name="turn_compost_count_value">7</string>

    <string name="compostInstruc">1. Find a compost bin that fits your personal criteria like the space you have available. \n2. Pick a location for your bin. Make sure it is outside and in direct sunlight for most of the day. \n3. Fill the bottom of the bin with brown materials like soil and dried brown leaves, dead plants, weeds, sawdust, and hay. \n4. Fill the middle of your compost pile with food waste and plastic\n\ta. Before placing larger piece plastic in your compost, try cutting it up into smaller pieces to speed up the decomposition process.\n5. Make sure your compost doesn\’t exceed 30% bioplastic and is mostly green waste like food scraps or yard waste like leaves and weeds.\n6. Cover the top with more brown materials.\n7. Keep your compost in a warm environment that gets a lot of sunlight.\n8. Turn your compost every two weeks while adding more green waste until the bioplastic has decomposed.
</string>

    <string name="insulateHeatInstruc">How can you insulate for heat? \nKeeping your compost as hot as possible will help to break down the bioplastic faster! To keep the warmth inside of your compost bin you can try lining the insides of your bin with a material like cardboard, straw, sawdust, or leaves. To increase the temperature, keep your compost in as much sunlight as you possibly can. Adding nitrogen rich materials to your compost like vegetable scraps, coffee grounds, and grass clippings can also help increase the temperature of your compost. Consider investing in a compost tumbler to keep your compost hot, and make turning your compost easier.
</string>

    <string name="readBioplasticLabelsInstruc">In order to break down plastic in your compost you need to make sure the plastic is marked as “Home Compostable.” It can not be just labeled “biobased,” “biodegradable,” or “compostable.” Just because something says “100% compostable” it does not mean that the product will decompose in your backyard compost, it may need an industrial composter. \nPlastics like PLA are compostable, but only in high temperatures or around specific microbes that can not be found at home. One of the most common bioplastic blends that can be composted at home is PHA or polyhydroxyalkanoates made from canola plants. \nThere are different certifications for compostable plastics. Each certification has a different label that can be added to the product’s packaging. The TUV Austrian’s certification accounts for if something can be composted at home. If a product is labeled with the OK Home Compost Austrian logo, it will decompose in under a year in home composting conditions.\nDifferent countries like Italy, Australia, and France also have certification for home compostable standards, but they are not standardized and differ from each other and the Austrian one.\nhttps://bpiworld.org/ \nhttps://products.bpiworld.org/ \nLook for plastic items that say “Home Compost OK” on the label \nThe plastic must specify that it is “Home Compost OK”, not just “Biobased” or “Compostable” \n“One of the newest and yet most common home compostable bioplastics is called PHA (polyhydroxyalkanoates)” \nJust because something says that it is “100% compostable” it does not mean that the product will decompose in your backyard compost, that label is applied to products that are only compostable in industrial conditions. \nThere are different rating from different countries that certify compostable products, common ones look like:\n\tAustrian one certified composted in under a year
</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>