<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_accountSetup_otherGender"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:hint="@string/other"
        app:layout_constraintBottom_toTopOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_accountSetup_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        app:rippleColor="#00913636" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="8dp"
        android:layout_height="13dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/necessarymarker"
        app:layout_constraintBottom_toBottomOf="@+id/editText_accountSetup_password"
        app:layout_constraintEnd_toStartOf="@+id/editText_accountSetup_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_accountSetup_password"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_accountSetup_username"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintVertical_bias="0.100000024"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_accountSetup_password"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView_accountLogin_appName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_setup"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView_accountSetup_basicInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_information"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountLogin_appName2"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textView_accountSetup_contactInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_information"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountLogin_appName2"
        app:layout_constraintVertical_bias="0.468000002" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="8dp"
        android:layout_height="13dp"
        android:contentDescription="@string/necessarymarker"
        app:layout_constraintBottom_toBottomOf="@+id/editText_accountSetup_email"
        app:layout_constraintEnd_toStartOf="@+id/editText_accountSetup_email"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_accountSetup_email"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_accountSetup_phoneNumber"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_accountSetup_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintVertical_bias="0.07999998"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_accountSetup_email"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:hint="@string/gmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintVertical_bias="0.225"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="8dp"
        android:layout_height="13dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/necessarymarker"
        app:layout_constraintBottom_toBottomOf="@+id/editText_accountSetup_username"
        app:layout_constraintEnd_toStartOf="@+id/editText_accountSetup_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_accountSetup_username"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup_accountSetup_gender"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView_accountSetup_contactInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_accountSetup_basicInformation"
        app:layout_constraintTop_toBottomOf="@+id/textView_accountSetup_basicInformation">

        <RadioButton
            android:id="@+id/radioButton_accountSetup_male"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:text="@string/male"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_accountSetup_female"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="-145dp"
            tools:layout_editor_absoluteY="661dp" />

        <RadioButton
            android:id="@+id/radioButton_accountSetup_other"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:text="@string/other"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>